# ChangeLog for dev-util/ktigcc
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  15 Jun 2007; Christian Helbling <helch@gmx.ch> ktigcc-1.07.ebuild:
  Adjusting version numbers of dependencies

  12 May 2007; Jakub Moc <jakub@gentoo.org> ktigcc-1.07.ebuild:
  Replace no-completion-data use flag with USE=minimal

  18 Apr 2007; Markus Ullmann <jokey@gentoo.org> -ktigcc-1.06.ebuild:
  Drop old

  08 Apr 2007; Christian Helbling <helch@gmx.ch> +ktigcc-1.07.ebuild:
  Version bump

  04 Dec 2006; Markus Ullmann <jokey@gentoo.org> -ktigcc-1.05.ebuild:
  Remove old

  02 Dec 2006; Christian Helbling <helch@gmx.ch> +ktigcc-1.06.ebuild:
  Version bump

  28 Nov 2006; Tiziano Müller <dev-zero@gentoo.org> ktigcc-1.05.ebuild:
  Setting qt_min_version to 3.3

  07 Nov 2006; Christian Faulhammer <opfer@gentoo.org> ktigcc-1.05.ebuild:
  it's an obsession of me: Added trailing slash to HOMEPAGE URL

  06 Nov 2006; Christian Helbling <helch@gmx.ch> +ktigcc-1.05.ebuild,
  +files/ktigcc.desktop, +files/ktigcc.xml, +files/x-tigcc-project.desktop,
  +metadata.xml:
  New ebuild for bug 146032
