@@ -1,7 +1,7 @@
 AUX ktigcc.desktop 222 RMD160 458fc252b597a458ab51805ee6ef0d666906bf44 SHA1 b62e4f967be4f96a65289a4623151603504a2487 SHA256 16071fb929d3e4e4b766acadbf5c9041946f3c19258b7bc189f4560c14647b4b
 AUX ktigcc.xml 304 RMD160 6675399d4552b1a8343bf6bd3211be0aadd814de SHA1 67550ed16742db967bb87c889a8b7da89b769e83 SHA256 ea7eff450b33bd041cbf980f2925ce9d2ad8025a70625473541f65163d7dc735
 AUX x-tigcc-project.desktop 182 RMD160 888950fe81dd2f0a2c7d5d4faf45c63b4f185f0c SHA1 d06e8d6e0ac20fda6c3a1cbe8e711443e7066910 SHA256 6cab24a4d5bd8e9288791007e6c0bbd22b751bf8c0680b7fefbc29bd5ecd3550
-DIST ktigcc-1.07.tar.bz2 146973 RMD160 ffdc304b8dcfc53682dcaf3ddd00aaeee1bd1e3a SHA1 4ed4dc5c4524c6f4a4d80c2e2ce0692aafa643b4 SHA256 63206559ba8f84f1f719fb600fc6d639511596f48b44a3abb5698d1b758e42f0
-EBUILD ktigcc-1.07.ebuild 1397 RMD160 3c338556db6565217789c08ba3884642776cf4aa SHA1 6c7e25b67a31edccd165d301892d647af93a8a10 SHA256 54132d2d9b0a3e01551d1306fdbe74fbe2e19951d9e3f4e7dbef53d9bab569be
-MISC ChangeLog 1126 RMD160 c8d2e18f9fde45fa54fd46c69517ae832668203c SHA1 e8ec8f6a308c6aa56d581fbe4b27526722f6f123 SHA256 0f8bdec84520a696c5a7603c3879b4b8b3055a5f4743eb66cee562ad0b95c37f
+DIST ktigcc-1.08.tar.bz2 147671 RMD160 8885f54c9c011b5d3036c8a41f73aebe3327bcda SHA1 807a9872ff98c4ea69d77ae07365ba5b28d769f9 SHA256 351962868d34393c74e3a89ed616dfb2607e2263b4deeae177483af5c6e72a60
+EBUILD ktigcc-1.08.ebuild 1494 RMD160 a53768d6c8883d0b137b4e4d08f55e54f740fbf0 SHA1 cd58ed07b925eff531981ae9db2b2c35545c659b SHA256 9a25ff69d2c863bd7e44ebc9267a1fc3b71120ef172b007ac39b09f00e41a8e1
+MISC ChangeLog 1235 RMD160 efc7aded4949f125016797ed89cdeb4f28bbd782 SHA1 1e0dc6e5d3921cd57511d7c402844c34d33f6fec SHA256 c96a8cb9d0afbb2880bb53d25bdac9ded528c11fea1f733151564e2b3f47f09b
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
