@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  22 Sep 2007; Christian Helbling <helch@gmx.ch> -ktigcc-1.07.ebuild,
+  +ktigcc-1.08.ebuild:
+  version bump
+
   15 Jun 2007; Christian Helbling <helch@gmx.ch> ktigcc-1.07.ebuild:
   Adjusting version numbers of dependencies
 
